--- a/public/app/view2/view2.html
+++ b/public/app/view2/view2.html
@@ -1,9 +1,8 @@
-<pre>handinfo = {{handinfo | json}}</pre>
 <h1>Add more table information</h1>
 <p>OK, {{handinfo.playercount}} players at the table.</p>
 <p>Blinds: {{handinfo.smallblind}} / {{handinfo.bigblind}} / {{handinfo.ante}}</p>
 <p>Now set the player details</p>
-<form ng-submit="submit()">
+<form novalidate>
     <table>
         <thead>
         <tr>
@@ -11,20 +10,29 @@
             <td>Stack?</td>
             <td>Button?</td>
             <td>Hero?</td>
+            <td>Hand</td>
         </tr>
         </thead>
         <tbody>
         <tr ng-repeat="player in handinfo.players">
-            <td><input type="text" ng-model="player.name"></td>
-            <td><input type="text" ng-model="player.stack" value="5000"></td>
+            <td><input type="text" ng-model="player.name" required></td>
+            <td><input type="text" ng-model="player.stack" required></td>
             <td><input type="radio" ng-model="handinfo.buttonpos" value="{{player.index}}"></td>
             <td><input type="radio" ng-model="handinfo.heropos" value="{{player.index}}"></td>
+            <td>
+                <input type="text" ng-model="player.cards[0]" ng-pattern="/^[2-9TJQKAtjqka][cshd]$/" required maxlength="2" size="2" />
+                <input type="text" ng-model="player.cards[1]" ng-pattern="/^[2-9TJQKAtjqka][cshd]$/" required maxlength="2" size="2" />
+            </td>
         </tr>
         </tbody>
     </table>
-    <input type="submit" value="Next">
+    <input type="submit" value="Next" ng-click="submit()">
 </form>
 
 <hr>
 
 <pre>{{logfile}}</pre>
+
+<hr/>
+
+<pre>handinfo = {{handinfo | json}}</pre>
